--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,7 +2,7 @@ plugins {
     id 'com.android.application'
     id 'kotlin-android'
     id 'kotlin-parcelize'
-
+    id 'com.google.gms.google-services'
 }
 
 android {
@@ -51,4 +51,13 @@ dependencies {
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+
+    // Bill of Materials básica do Firebase
+    implementation platform('com.google.firebase:firebase-bom:29.0.0')
+
+    //biblioteca Firebase
+    implementation 'com.google.firebase:firebase-database-ktx'
+
+    //autenticação
+    implementation 'com.google.firebase:firebase-auth-ktx'
 }
